feat:logo & menu adjust

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
     </h2>
     <p class="text">Grow your business and boost up sale.</p>
     <button>Explore us</button>
+    <ul id="client-logo">
+      <li class="logo logo-discord"><img src="assets/img/discord.png" alt=""></li>
+      <li class="logo logo-groupm"><img src="assets/img/groupm.png" alt=""></li>
+      <li class="logo logo-audiomack"><img src="assets/img/audiomack.png" alt=""></li>
+      <li class="logo logo-microsoft"><img src="assets/img/microsoft.png" alt=""></li>
+    </ul>
   </section>
 </body>
 </html>
