feat:showcase images

--- a/index.html
+++ b/index.html
@@ -30,11 +30,19 @@
     <p class="text">Grow your business and boost up sale.</p>
     <button>Explore us</button>
     <ul id="client-logo">
-      <li class="logo logo-discord"><img src="assets/img/discord.png" alt=""></li>
-      <li class="logo logo-groupm"><img src="assets/img/groupm.png" alt=""></li>
-      <li class="logo logo-audiomack"><img src="assets/img/audiomack.png" alt=""></li>
-      <li class="logo logo-microsoft"><img src="assets/img/microsoft.png" alt=""></li>
+      <li class="logo logo-discord"><img src="assets/img/discord_m.png" alt=""></li>
+      <li class="logo logo-groupm"><img src="assets/img/groupm_m.png" alt=""></li>
+      <li class="logo logo-audiomack"><img src="assets/img/audiomack_m.png" alt=""></li>
+      <li class="logo logo-microsoft"><img src="assets/img/microsoft_m.png" alt=""></li>
     </ul>
+    <section id="showcase-background">
+      <figure class="bubble background">
+        <img src="assets/img/bubble.png" alt="">
+      </figure>
+      <figure class="ilustration background">
+        <img src="assets/img/Illustration.png" alt="">
+      </figure>
+    </section>
   </section>
 </body>
 </html>
