feat:adding services section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" href="assets/css/header.css">
   <link rel="stylesheet" href="assets/css/showcase.css">
+  <link rel="stylesheet" href="assets/css/services.css">
 </head>
 <body>
   <header class="header">
@@ -42,6 +43,32 @@
       <figure class="ilustration background">
         <img src="assets/img/Illustration.png" alt="">
       </figure>
+      <span class="azul"></span>
+    </section>
+  </section>
+  <section id="services">
+    <h1 class="services-title">Services</h1><br>
+    <h2 class="services-content">Our Agency Providing</h2><br><br>
+    <p class="services-description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore</p>
+    <section class="services">
+      <div class="business">
+        Business Strategy<br>
+        Lorem ipsum dolor sit consetetur diam
+        sadipscing elitr, sed diam nonumy eirmod
+        tempor invidunt
+      </div>
+      <div class="advance">
+        Advance Analysis<br>
+        Lorem ipsum dolor sit consetetur diam
+        sadipscing elitr, sed diam nonumy eirmod
+        tempor invidunt
+      </div>
+      <div class="content">
+        Content Marketing<br>
+        Lorem ipsum dolor sit consetetur diam
+        sadipscing elitr, sed diam nonumy eirmod
+        tempor invidunt
+      </div>
     </section>
   </section>
 </body>
