--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Digital Agency</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
   <link rel="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" href="assets/css/header.css">
   <link rel="stylesheet" href="assets/css/showcase.css">
@@ -52,22 +53,25 @@
     <p class="services-description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore</p>
     <section class="services">
       <div class="business">
-        Business Strategy<br>
-        Lorem ipsum dolor sit consetetur diam
+        <i class="far fa-lightbulb"></i>
+        <h1>Business Strategy</h1>
+        <p>Lorem ipsum dolor sit consetetur diam
         sadipscing elitr, sed diam nonumy eirmod
-        tempor invidunt
+        tempor invidunt</p>
       </div>
       <div class="advance">
-        Advance Analysis<br>
-        Lorem ipsum dolor sit consetetur diam
+        <i class="fas fa-search"></i>
+        <h1>Advance Analysis</h1>
+        <p>Lorem ipsum dolor sit consetetur diam
         sadipscing elitr, sed diam nonumy eirmod
-        tempor invidunt
+        tempor invidunt</p>
       </div>
       <div class="content">
-        Content Marketing<br>
-        Lorem ipsum dolor sit consetetur diam
+        <i class="far fa-list-alt"></i>
+        <h1>Content Marketing</h1>
+        <p>Lorem ipsum dolor sit consetetur diam
         sadipscing elitr, sed diam nonumy eirmod
-        tempor invidunt
+        tempor invidunt</p>
       </div>
     </section>
   </section>
